--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "repositories": [
         {
             "url": "https://github.com/psgdev/musqlidb.git",
-            "type": "git",
-            "reference": "master"
+            "type": "git"
         }
     ],
     "require": {
