--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Xml2db\\": "src/Xml2db/"
+            "PsgdevXml2db\\": "src/PsgdevXml2db/"
         }
     }
 }
